fixed the alignments of button and text in entry page

--- a/src/layout/entry/Entry.scss
+++ b/src/layout/entry/Entry.scss
@@ -1,30 +1,41 @@
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
+    height: 100vh;
+    width: 100vw;
 
     .text_container {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        gap: 18px;
+        margin-top: 96px;
         .sub_heading {
             font-family: 'Bilbo';
-            font-style: normal;
             font-weight: 400;
             font-size: 36px;
             line-height: 45px;
             color: #000000;
         }
         .heading {
+            width: 75%;
             font-family: 'Bilbo';
-            font-style: normal;
             font-weight: 400;
             font-size: 96px;
             line-height: 120px;
             text-align: center;
             color: #000000;
         }
+    }
+
+    .action_container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 24px;
     }
 }
